samples/_failures_safe/1761785545_a978ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_840fc3b7.c: In function ‘main’:
./samples/SAFE/__tmp_840fc3b7.c:149:5: error: expected declaration or statement at end of input
  149 |     add_edge(&graph, 3, 5, 6);
      |     ^~~~~~~~
